going to test a better table gen view

--- a/qml.qrc
+++ b/qml.qrc
@@ -12,5 +12,6 @@
         <file>NumberTableModel.qml</file>
         <file>images/blackboard.jpg</file>
         <file>HeaderViewModel.qml</file>
+        <file>images/circle.png</file>
     </qresource>
 </RCC>
